# doors-dwa-client

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dco.yml
doc/: guid.md  urn.md
dwa_client/: __init__.py  auth.py  cache.py  client.py  guid.py  printers.py  resources.py  transport.py
dwa_client/oslc/: __init__.py  client.py  common.py  urn.py  views.py
tests/: conftest.py  test_guid.py  test_urn.py
