[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doors-dwa-client"
version = "0.1.0"
description = "Python client for IBM DOORS Classic Web Access and OSLC APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Stefan Bolus", email = "stefan.bolus@gmx.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "rdflib",
    "urllib3"
]

[project.urls]
Homepage = "https://github.com/stefbo/doors-dwa-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["dwa_client*"]

